--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     </header>
     <main class="apresentacao">
         <section1 class="apresentacao__conteudo">
-            <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível <strong class="titulo-estaque"> 
-            um Front-end de qualidade!</strong> </h1>
-            <P class="apresentacao__conteudo__texto">Olá! Sou Felipe Guedes, desenvolvedor de Front-end com especialidade em  React, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</P>
+            <h1 class="apresentacao__conteudo__titulo">Você está acessando o portfólio do desenvolvedor Felipe Guedes. <strong class="titulo-estaque"> 
+            </strong> </h1>
+            <P class="apresentacao__conteudo__texto">Olá! Sou Felipe Guedes, seja bem vindo ao meu portfólio.</P>
            <div class="apresentacao__links">
             <h2 class="apresentacao__links__subtitulo">Acesse minhas redes:</h2>
                 <a class="apresentacao__links__navegacao" href="https://github.com/fguedao">
@@ -49,12 +49,12 @@
                 
             </div>
         </section1>
-    <img class="apresentacao__imagem" src="./assets/eu.jpeg" alt="Foto do Guedão Codando">
+    <img class="apresentacao__imagem" src="./assets/eu-praia.jpeg" alt="Foto de Felipe Guedes">
     
     </main>
     <footer class="rodape">
         <p>
-            Desenvolvido por Guedao
+            Desenvolvido por Felipe Guedes.
         </p>
     </footer>
 </body>
